--- a/tiktuk/.env_sample
+++ b/tiktuk/.env_sample
@@ -1,1 +1,2 @@
-API_KEY=YOUR_KEY_FOR_RAPID_TIKTOK_API
+REACT_APP_API_KEY=YOUR_KEY_FOR_RAPID_TIKTOK_API
+REACT_APP_API_URL=https://tiktok33.p.rapidapi.com
