--- a/tiktuk/package.json
+++ b/tiktuk/package.json
@@ -7,6 +7,8 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.1.0",
     "@mui/material": "^5.1.0",
+    "@mui/styles": "^5.1.1",
+    "@researchgate/react-intersection-observer": "^1.3.5",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -17,6 +19,7 @@
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.32.2",
     "react-player": "^2.9.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
