--- a/tiktuk/package.json
+++ b/tiktuk/package.json
@@ -53,10 +53,15 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
+    "eslint": "^8.5.0",
     "eslint-config-airbnb": "^19.0.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-more": "^1.0.5",
+    "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.27.0",
-    "eslint-plugin-react-hooks": "^4.3.0"
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-regexp": "^1.5.1",
+    "eslint-plugin-unicorn": "^39.0.0"
   }
 }
